--- a/WebServer/index.html
+++ b/WebServer/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 
 <html lang="ru-RU">
 <head>
@@ -8,7 +8,7 @@
 
 </head>
 <body>
-    <h2 style="color:blue; text-align:center">COMPUTER INFORMATION (WMI)</h2>
+    {% INCLUDE '../../header.html' %}
     <table class="table">
         <thead>
             <tr>
