Added embedded resources support

--- a/WebServer/header.html
+++ b/WebServer/header.html
@@ -1,5 +1,6 @@
 ﻿<div style="padding:5px; background-color:navy;">
-    <h2 style="color:yellow; text-align:center">COMPUTER INFORMATION (WMI)</h2>
+    <h2 style="color:yellow; text-align:center"><img src="Info-icon.png" />&nbsp;COMPUTER INFORMATION (WMI)</h2>
 </div>
 
 <span style="font-size:70%; margin:3px;">Generated: {{date}}</span>
+<img src="http_status_not_found_icon.png" />
