--- a/WebServer/Resources/header.html
+++ b/WebServer/Resources/header.html
@@ -1,7 +1,7 @@
 ﻿<div style="padding:5px; background-color:navy; display:table; width: 100%;">
     <h2 style="color:yellow; text-align:center; display:table-cell"><img src="Info-icon.png" />&nbsp;COMPUTER INFORMATION</h2>
 
-    {% IF session['user'] == '' %}
+    {% IF session['user'] == null %}
     <div style="display:table-cell; width:32px;">
         <img style="cursor: pointer;" onclick="showLogin()" src="Lock-Lock-icon.png" />
     </div>
